# actifix

./: .coverage.gBook_local.pid57159.XxjC03Zx.HULNyKb2qbih  .coverage.gBook_local.pid57160.XYX6ltox.HM510YrZXpSh  .coverage.gBook_local.pid57161.X9iSUGfx.HvU70zkVOFSh  .coverage.gBook_local.pid57162.XOfrY07x.HbI16Zg1gz6h  .coverage.gBook_local.pid57163.XO0F1bGx.HAruRI3VC10h  .coverage.gBook_local.pid57164.XMeKjMJx.HPNcwJZPBwGh  .coverage.gBook_local.pid57168.X8UiqXbx.HGypd3qAlRUh  .coveragerc  .gitignore  AGENTS.md  ARCHITECTURE_SUMMARY.md  CHANGELOG.md  CLAUDE.md  DEBUGGING_ARTIFACTS.txt  Do_AF.py  INDEX.md  LICENSE  QUALITY_GATES_DOCUMENTATION_INDEX.md  QUALITY_GATE_IMPLEMENTATION.md  QUICKSTART.md  README.md  README_QUALITY_GATES.md  SELF_MONITORING_ASSESSMENT.md  START_PY_IMPROVEMENTS.md  TASK_LIST.md  TICKET_CLEANUP_SUMMARY.md  ULTRATHINK_CORRECTIONS.md  bounce.py  cleanup_remaining_tickets.py  cleanup_test_tickets.py  codebase.py  complete_100_tickets.py  complete_50_tickets.py  create_actifix_presentation.py  generate_200_ultrathink_tickets.py  generate_context_graph_tickets.py  kill.py  optimize_tickets.py  pyproject.toml  pytest.ini  (+18 more)
.state/: persistence_queue.json
Arch/: ARCHITECTURE_CORE.md  DEPGRAPH.json  MAP.yaml  MODULES.md
actifix/: ACTIFIX-LIST.md  ACTIFIX-LOG.md  ACTIFIX.md  AFLog.txt
actifix-frontend/: README.md  app.js  index.html  styles.css
data/: actifix.db  actifix.db-shm  actifix.db-wal
docs/: ADMIN_AUTHENTICATION.md  AI_AGENT_GUIDE.md  CLEANUP_IMPLEMENTATION_SUMMARY.md  COVERAGE_OPTIMIZATION.md  DEVELOPMENT.md  FRAMEWORK_OVERVIEW.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INSTALLATION.md  MONITORING.md  QUICKDEV.md  QUICKSTART.md  QUICK_ADMIN_SETUP.md  SECURITY.md  TESTING.md  TEST_MARKERS_GUIDE.md  TEST_PERFORMANCE_OPTIMIZATION.md  TICKET_CLEANUP.md  TICKET_PROCESSING_SUMMARY.md  TROUBLESHOOTING.md  VERSION_SYNC_SOLUTION.md  token_robustness_campaign.md  ultrathink_tickets_summary.md
scripts/: 2026_01_25_doctor_patch.diff  2026_01_26_tickets1.py  Do_AF.py  __init__.py  apply_portal_theme.sh  apply_test_markers.py  bounce.py  build_frontend.py  check_tickets.py  cleanup_remaining_tickets.py  cleanup_test_tickets.py  close_self_repair_batch.py  codebase.py  complete_all_tickets.py  complete_tickets_manual.py  consolidate_ticket_buckets.py  create_pokertool_tickets.py  do_af_local_automation.py  fix_ticket_completion.py  generate_200_improvement_tickets.py  generate_architecture_robustness_tickets.py  generate_dashboard_tickets.py  generate_frontend_migration_tickets.py  generate_high_value_tickets.py  generate_improvement_tickets.py  generate_multi_agent_tickets.py  generate_test_tickets.py  github_issue_sync.py  ingest_error_logs.py  install_dev_assistant.py  interactive_ticket_review.py  mark_all_complete.py  mark_integration_tickets_complete.py  mark_manifest_ticket.py  mark_smoke_ticket.py  mark_smoketest_ticket.py  (+25 more)
(+278 files in other folders)
