[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "actifix"
version = "8.0.1"



dependencies = [
    "gitignore_parser>=0.1.3",
]

[project.optional-dependencies]
web = ["flask", "flask-cors", "flask-socketio"]

[project.entry-points."actifix.plugins"]
core = "actifix.plugins.builtin:CorePlugin"

[tool.coverage.run]
source = ["src/actifix"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/__main__.py",
]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = false
precision = 2
